--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
+# Core dependencies
 Pillow>=12.0.0
 openai>=2.9.0
 
-# For Model Deployment
+# Type-safe configuration
+pydantic>=2.5.0
 
-## After installing sglang or vLLM, please run pip install -U transformers again to upgrade to 5.0.0rc0.
-## Any dependency conflicts related to Transformers can be ignored.
+# REST API
+fastapi>=0.104.0
+uvicorn>=0.24.0
 
-# sglang>=0.5.6.post1
-# vllm>=0.12.0
-# transformers>=5.0.0rc0
+# Optional: Model deployment (uncomment if needed)
+# sglang
+# vllm
+# transformers
 
-# Optional: for development
-# pytest>=7.0.0
-# pre-commit>=4.5.0
-# black>=23.0.0
-# mypy>=1.0.0
+# Development dependencies
+pytest>=7.4.0
+pytest-cov>=4.1.0
+ruff>=0.1.0
+mypy>=1.7.0
+bandit>=1.7.0
+
+# Type stubs
+types-requests>=2.31.0
